--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* 🌐 Styles généraux */
+/* 🌐 Styles des conteneurs */
 html, body {
   height: 100%; /* Important pour que flex fonctionne sur tout l'écran */
   margin: 0;
@@ -46,6 +46,7 @@ header {
   display: flex;
   flex-direction: column;
 }
+/* 🌐 Styles des boutons */
 .bi {
   font-size: 1.5em;
   vertical-align: middle;
@@ -54,7 +55,8 @@ header {
 h1, h2, h3, h4, h5, h6 {
   margin: 0; /* supprime les marges par défaut */
 }
-header h2{
+header h2,
+.container h3{
   margin: 0 0 10px 0;
 }
 #login {
