--- a/index.css
+++ b/index.css
@@ -314,6 +314,9 @@ h2 {
   transform: translateY(0);
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
+#logoutBtnpc{
+  display: block;
+}
 #logoutBtnmob{
   display: none;
 }
