--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ h1, h2, h3, h4, h5, h6 {
 header h2,
 .container h3{
   margin: 0 0 10px 0;
+  align-self: flex-start;
 }
 #login {
   display: flex;
