--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ header {
   flex: 1;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;/*Test*/
   align-items: center;
 }
 /* 🌐 Styles des boutons */
