--- a/index.css
+++ b/index.css
@@ -48,6 +48,22 @@ header {
   align-items: center;
 }
 /* 🌐 Styles des boutons */
+.container button {
+  font-weight: bold;
+  padding: 12px 20px;
+  background: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  transition: background 0.3s, transform 0.2s;
+  box-sizing: border-box;
+  width: auto;       /* largeur naturelle du contenu */
+  display: inline-block; /* ne prend pas toute la largeur */
+  /*align-self: flex-start; dans un parent flex-col, ne s'étire pas */
+}
+#btnrecu2 { /*bouton au milieu éloigne les autres*/
+  margin: 10px 0;
+}
 .bi {
   font-size: 1.5em;
   vertical-align: middle;
