--- a/index.css
+++ b/index.css
@@ -32,8 +32,8 @@ header {
 #infos,
 #services {
   padding: 25px 30px;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  /*border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);*/
   /*width: 100%;*/
   display: flex;
   flex-direction: column;
@@ -46,6 +46,9 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 /* 🌐 Styles des boutons */
 .container button {
