--- a/index.css
+++ b/index.css
@@ -29,20 +29,11 @@ header {
   /*padding: 0 20px;  espace par rapport aux bords gauche/droite */
   gap: 20px; /* espace entre #infos et #services */
 }
-#infos {
+#infos,
+#services {
   padding: 25px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  /*width: 100%;*/
-  display: flex;
-  flex-direction: column;
-  flex: 1; /* prend la même largeur que l'autre bloc */
-  max-width: 500px; /* limite la largeur si l'écran est très large */
-}
-#services {
-  padding: 25px 30px;
-  /*border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);*/
   /*width: 100%;*/
   display: flex;
   flex-direction: column;
@@ -55,9 +46,6 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
 /* 🌐 Styles des boutons */
 .container button {
