--- a/index.css
+++ b/index.css
@@ -40,7 +40,12 @@ header {
   flex: 1; /* prend la même largeur que l'autre bloc */
   max-width: 500px; /* limite la largeur si l'écran est très large */
 }
-#recus,
+#recus {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 #autres {
   flex: 1;
   display: flex;
