--- a/index.css
+++ b/index.css
@@ -192,7 +192,7 @@ h2 {
   margin-bottom: 5px;
   width: 160px;
 }
-#btnfail button {
+#btnfail button {/* cinfailcncl et btnsignal */
   width: auto;
   flex: 1;
   margin: 5px 0;
@@ -202,6 +202,8 @@ h2 {
   border-radius: 6px;
   padding: 12px 20px;
   box-sizing: border-box;
+}
+#cinfailcncl {
   background: #909090;
 }
 #btnsignal {
