--- a/index.css
+++ b/index.css
@@ -48,6 +48,11 @@ header {
 }
 #btnrecus {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  /*align-items: center;*/
+  justify-content: space-between;
+  margin: 10px 0;
 }
 #autres {
   flex: 1;
