--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ header {
   flex-direction: column;
   /*align-items: center;*/
   justify-content: space-between;
-  margin: 10px 0;
+  gap: 10px;
 }
 #autres {
   flex: 1;
