--- a/index.css
+++ b/index.css
@@ -79,6 +79,24 @@ header {
   display: none;
   width: 100%;
 }
+.preview-recu {
+  position: fixed;
+  display: none;
+  background: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  border-radius: 8px;
+  padding: 5px;
+  z-index: 9999;
+  width: 500px;
+  height: 353px; /* format A5 ajusté */
+  overflow: hidden;
+}
+.preview-recu iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
 .bi {
   font-size: 1.5em;
   vertical-align: middle;
