--- a/index.css
+++ b/index.css
@@ -247,14 +247,18 @@ h2 {
   gap: 10px;
   margin-top:10px;
 }
-.labels,
-.inputs{
+.labels {
   flex:1;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
-
+.inputs {
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 input:disabled {
   background: #e9ecef;
   cursor: not-allowed;
