--- a/index.css
+++ b/index.css
@@ -248,7 +248,7 @@ h2 {
   margin-top:10px;
 }
 .labels {
-  flex:1;
+  flex:0 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
